--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Odin sign-up form</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <main>
+      <div class="background">
+        <div>
+          <img src="resources/logo.png" alt="odin-logo" />
+          <h1>ODIN</h1>
+        </div>
+        <div>
+          Photo by
+          <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
+          <a href="https://unsplash.com/"> Unsplash</a>
+        </div>
+      </div>
+      <div class="content">
+        <p>
+          This is not a real online service! You know you need something like this in your life to
+          help you realize your deepest dreams.
+        </p>
+        <p>Sign up <em>now</em> to get started.</p>
+        <p>You <em>know</em> you want to.</p>
+        <div class="form-container">
+          <h2>Let's do this!</h2>
+          <form action="#" method="post">
+            <label for="first-name">First name</label>
+            <input type="text" id="first-name" name="first-name" />
+            <label for="last-name">Last name</label>
+            <input type="text" id="last-name" name="last-name" />
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" />
+            <label for="phone">Phone number</label>
+            <input type="number" id="phone" name="phone" />
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" />
+            <label for="password-confirm">Confirm password</label>
+            <input type="password" id="password-confirm" name="password-confirm" />
+            <button type="submit">Create Account</button>
+          </form>
+        </div>
+        <p>Already have an account? <a href="#">Log in</a></p>
+      </div>
+    </main>
+  </body>
 </html>
