Style the right panel of the sign-up page layout.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Odin sign-up form</title>
   </head>
   <body>
-    <main>
+    <main class="main">
       <div class="background">
-        <div>
+        <div class="logo-container">
           <img src="resources/logo.png" alt="odin-logo" />
           <h1>ODIN</h1>
         </div>
-        <div>
+        <div class="photo-credit">
           Photo by
           <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
           <a href="https://unsplash.com/"> Unsplash</a>
