--- a/index.html
+++ b/index.html
@@ -20,31 +20,53 @@
         </div>
       </div>
       <div class="content">
-        <p>
-          This is not a real online service! You know you need something like this in your life to
-          help you realize your deepest dreams.
-        </p>
-        <p>Sign up <em>now</em> to get started.</p>
-        <p>You <em>know</em> you want to.</p>
+        <div class="header-text">
+					<p>
+						This is not a real online service! You know you need something like this in your life to
+						help you realize your deepest dreams.
+					</p>
+					<p>Sign up <em>now</em> to get started.</p>
+					<p>You <em>know</em> you want to.</p>
+				</div>
         <div class="form-container">
-          <h2>Let's do this!</h2>
-          <form action="#" method="post">
-            <label for="first-name">First name</label>
-            <input type="text" id="first-name" name="first-name" />
-            <label for="last-name">Last name</label>
-            <input type="text" id="last-name" name="last-name" />
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" />
-            <label for="phone">Phone number</label>
-            <input type="number" id="phone" name="phone" />
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" />
-            <label for="password-confirm">Confirm password</label>
-            <input type="password" id="password-confirm" name="password-confirm" />
-            <button type="submit">Create Account</button>
+          <form action="#" method="post">				
+						<div class="form">
+							<h2>Let's do this!</h2>
+							<div class="form-row">
+								<div class="form-column">
+									<label for="first-name">First name</label>
+									<input type="text" id="first-name" name="first-name" />
+								</div>
+								<div class="form-column">
+									<label for="last-name">Last name</label>
+									<input type="text" id="last-name" name="last-name" />
+								</div>
+							</div>
+							<div class="form-row">
+								<div class="form-column">
+									<label for="email">Email</label>
+									<input type="email" id="email" name="email" />
+								</div>
+								<div class="form-column">
+									<label for="phone">Phone number</label>
+									<input type="number" id="phone" name="phone" />
+								</div>
+							</div>
+							<div class="form-row">
+								<div class="form-column">
+									<label for="password">Password</label>
+									<input type="password" id="password" name="password" />
+								</div>
+								<div class="form-column">
+									<label for="password-confirm">Confirm password</label>
+									<input type="password" id="password-confirm" name="password-confirm" />
+								</div>
+							</div>														
+						</div>
+            <button type="submit" class="btn">Create Account</button>
           </form>
         </div>
-        <p>Already have an account? <a href="#">Log in</a></p>
+        <p class="login">Already have an account? <a href="#">Log in</a></p>
       </div>
     </main>
   </body>
